--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sat Sep 02 14:53:19 CEST 2017
+#Sat Sep 02 16:55:19 CEST 2017
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
