--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Oct 01 16:17:54 CEST 2017
+#Tue Oct 31 16:33:09 CET 2017
 version=2.4.0
 modified=yes
 tx_timestamp=0
