some candle improvements

--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Tue Oct 31 16:33:09 CET 2017
+#Wed Nov 01 18:12:01 CET 2017
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
