--- a/TradeFX/hsdb.properties
+++ b/TradeFX/hsdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Tue Jul 25 19:35:55 CEST 2017
+#Mon Nov 13 16:58:43 CET 2017
 version=2.4.0
 modified=yes
 tx_timestamp=0
