--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Dec 03 17:15:39 CET 2017
+#Tue Dec 05 11:52:17 CET 2017
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
