--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Tue Dec 05 11:52:17 CET 2017
+#Thu Dec 28 17:05:43 CET 2017
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
