--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Jan 07 14:14:38 CET 2018
+#Fri Feb 02 19:19:47 CET 2018
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
