--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Wed Mar 07 10:33:57 CET 2018
+#Fri May 25 12:13:56 CEST 2018
 version=2.4.0
 modified=yes
 tx_timestamp=0
