--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Wed Jul 18 21:35:50 CEST 2018
+#Thu Jul 19 23:30:47 CEST 2018
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
