--- a/TradeFX/src/application/TradeFX.properties
+++ b/TradeFX/src/application/TradeFX.properties
@@ -8,3 +8,4 @@ DbgHistStockDataLoader = false
 MetricLoaderTaskDbg = false
 MetricMapLoaderWorkerDbg = false
 MetricDbg=false
+DbLastUpdate=2018-07-22
