--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Jul 22 20:11:17 CEST 2018
+#Wed Jul 25 22:36:11 CEST 2018
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
