--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Sun Jul 29 17:45:11 CEST 2018
+#Sun Jul 29 20:41:00 CEST 2018
 version=2.4.0
-modified=no
+modified=yes
 tx_timestamp=0
