--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Mon Sep 10 19:30:25 CEST 2018
+#Sat Nov 10 17:49:13 CET 2018
 version=2.4.0
 modified=yes
 tx_timestamp=0
