--- a/TradeFX/hsdb/new.properties
+++ b/TradeFX/hsdb/new.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.0
-#Thu Nov 15 18:50:30 CET 2018
+#Fri Nov 23 21:07:49 CET 2018
 version=2.4.0
-modified=yes
+modified=no
 tx_timestamp=0
